<resources>
    <string name="app_name">ГорВодоУчёт</string>
    <string name="cancel">Отмена</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="refresh">Обновить</string>
    <string name="registry_number">Номер в реестре</string>
    <string name="date">Дата поверки</string>
    <string name="number">Номер счётчика</string>
    <string name="save">Сохранить</string>
    <string name="address">Адрес</string>
    <string name="app_name_after">Добро пожаловать!</string>
    <string name="text_bottom">Войдите в свою учётную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="type_name">Введите имя</string>
    <string name="phone">Телефон</string>
    <string name="full_name">ФИО</string>
    <string name="end_date">Дата окончания поверки</string>
    <string name="name">Наименование СИ</string>
    <string name="type">Тип СИ</string>
    <string name="producer">Изготовитель</string>
    <string name="methodology">Методика</string>
    <string name="cold">Хол. %1$s</string>
    <string name="hot">Гор. %1$s</string>
    <string name="coldWater">Холодная</string>
    <string name="hotWater">Горячая</string>
    <string name="search">Поиск</string>
    <string name="label">label</string>
    <string name="new_client">Новый клиент</string>
    <string name="meters">Счётчики</string>
    <string name="add">Добавить</string>
    <string name="exit">Выйти</string>
    <string name="requiredField">Обязательное поле</string>
    <string name="add_photo"><u>Добавить Фото</u></string>
    <string name="waterType">Вода</string>
    <string name="certificateNumber">Номер свидетельства о поверке</string>
    <string name="clear_selected_images">Очистить выбранные фото</string>
    <string name="clientAdded">Клиент успешно добавлен</string>
    <string name="clientNotAdded">Ошибка! Клиент не добавлен</string>
    <string name="photoAdded">Добавлено %1$d фото</string>
</resources>
