<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/refresh_item"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_item"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>