<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowFullscreen="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/root_element"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:gravity="center_horizontal"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/text_bottom"
        android:textColor="@color/text_bottom"
        android:textSize="12sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignIn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnSignIn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnRegister"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnRegister"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>