<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialTheme"
    tools:context=".ClientFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="16dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/registry_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/registry_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/date"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/end_date"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/save_button"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>
</RelativeLayout>